Motion blur and Follow track constrain #45394

Closed
opened 2015-07-09 20:23:32 +02:00 by arild andersson · 7 comments

System Information
Linux min 17.1 64-bit
i7 X980
12gb
Blender Version
Broken: 2.75a c27589e

Short description of error
Motion Blur doesn't work correct with an object linked to an empty with a Follow track-constraint

Exact steps for others to reproduce the error

  1. Load footage into movie clip editor and track a feature a couple of frames. Preferably a fast moving one.
  2. Press the "Link empty to track".
  3. In the 3d view create any geometry and parent it to the newly created empty/track
  4. Turn on the motion blur and render.
  5. save render
  6. Collapse the Follow Track-constrain to a F-curve
  7. Render again and compare the two renders. See image{F205178}

The object rendered with the Follow Track-constraint (nr 1 in the image) is incorrect

**System Information** Linux min 17.1 64-bit i7 X980 12gb **Blender Version** Broken: 2.75a c27589e **Short description of error** Motion Blur doesn't work correct with an object linked to an empty with a Follow track-constraint **Exact steps for others to reproduce the error** 1. Load footage into movie clip editor and track a feature a couple of frames. Preferably a fast moving one. 2. Press the "Link empty to track". 3. In the 3d view create any geometry and parent it to the newly created empty/track 4. Turn on the motion blur and render. 5. save render 6. Collapse the Follow Track-constrain to a F-curve 7. Render again and compare the two renders. See image{[F205178](https://archive.blender.org/developer/F205178/MB_.png)} The object rendered with the Follow Track-constraint (nr 1 in the image) is incorrect

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @urildt

Added subscriber: @urildt

Added subscriber: @mont29

Added subscriber: @mont29

@urildt are you using Cycles or internal renderer (or does the issue happen with both)? Also, please always attach a .blend file (with very short video in this case) to demonstrate the issue, really helps to quickly checks the issue…

@urildt are you using Cycles or internal renderer (or does the issue happen with both)? Also, please always attach a .blend file (with very short video in this case) to demonstrate the issue, really helps to quickly checks the issue…
Sergey Sharybin was assigned by Bastien Montagne 2015-07-10 21:31:52 +02:00

Sergey, think this one is in your area(s).

Sergey, think this one is in your area(s).

This issue was referenced by 6f7926c61c

This issue was referenced by 6f7926c61c94ea9bd2969ebfcc7e09994ffe901d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45394
No description provided.