Fix T45394: Motion tracking constraints did not work with Cycles motion blur